mobile layout broken for interests, button + menu fixed

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #navigation a:hover {
     color: lightgray;
 }
-#change_color {
+#changeColor {
     display: block;
     margin: 0 auto;
     padding: 20px;
@@ -107,22 +107,22 @@ div.interestBox {
 
 
 
-@media (max-width:700px){
+@media (max-width: 700px){
 
     h1{
-        font-size:40px;
+        font-size: 40px;
     }
 
     p{
-        font-size:22px;
+        font-size: 22px;
     }
 
     #panel{
-        width:50%;
+        width: 50%;
     }
 
     #menuButton{
-        width:45px;
+        width: 45px;
     }
 
 }
